--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=5000
 MONGO_URI=mongodb+srv://himanshugarg58063:PgELm7O5FBc7xS5K@cluster0.qnsj6yu.mongodb.net/gst_invoicing?retryWrites=true&w=majority
+BASEAPI_URL=http://localhost:5000/api
